asm_tests/other_testfiles/invalid_files/error3.s
.comment "MORJESTMORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!MORJESTA!A!"

ld r2, %12
